"ChangeLog"

2005-09-09	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-58-unique-02-05:
	  Have top-level state allocation and frame assignment working, 
		need to enable recursion.  Currently result is visible
		only from the stdout dump of hackt create <unrolled obj>.
	  TODO: enable deep recursion for private subinstance allocation.  
	  TODO: introduce alloc/cflat phase.  


2005-09-08	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-58-unique-02-04:
	  Added port_context class as a helper for passing globally
		allocated ids in a structure down through recursive
		structure instantiations.  
	  Global enrty pool allocator now reserves the 0th entry of each
		type in advance as a NULL placeholder.  
	  Partial implementations of subinstance expansion and 
		footprint_frame assignment.  
	  TODO: guarantee footprint pointer pseudo-persistence
		and reconstructibility.  


2005-09-07	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-58-unique-02-03:
	  Implemented persistence (partial) and dumping of global
		state structures. 
	  Haven't enabled global creation yet.  


2005-09-06	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-58-unique-02-02:
	  Replaced the silly getter template-specialized functors 
		with template base classes in footprint and port_alias_tracker. 


	* ARTXX-00-01-04-main-00-58-unique-02-01:
	  This branch is for creating top-level global unique instances.
	  This revision set up part of the framework for traversing the 
		hierarchy to allocate unique instances in the global
		pool, now managed by the state_manager class.  
		The state_manager resembles a footprint, except that the
		entries are not just placeholders.  
	  Code execution has not changed, because the final allocation
		has not been enabled yet.  


2005-09-05	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-58:
	  Split "Object/inst/instance_collection.tcc" into