@@ -1,5 +1,14 @@
 "ChangeLog"
 
+2005-09-11	David Fang		<fangism@users.sourceforge.net>
+
+	* ARTXX-00-01-04-main-00-58-unique-02-06:
+	  Factored out allocation into separate compilation phase 'alloc'.  
+		Run 'hackt alloc' to allocate unique global state.  
+	  Eliminated unused state_manager argument from construct_port_context.
+	  Updated sub-program usage messages.  
+
+
 2005-09-09	David Fang		<fangism@users.sourceforge.net>
 
 	* ARTXX-00-01-04-main-00-58-unique-02-05:
